<resources>
    <string name="app_name">Shoppie</string>
    <string name="shoppie">Shoppie</string>
    <string name="any_shopping_just_from_home">Any shopping just from home</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="username">Username</string>
    <string name="create_your_username">Create your username</string>
    <string name="email">Email or Phone</string>
    <string name="enter_your_email">Enter your email/phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="create_your_password">Create your password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="signup_with_google">Signup with Google</string>
    <string name="signup_with_facebook">Signup with Facebook</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_have_sent_you_an_sms_with_an_otp_code_to">We have sent you an SMS with an OTP code to </string>
    <string name="submit">Submit</string>
    <string name="register_success">Register Success</string>
    <string name="congratulations_your_account_is_created_please_login_to_continue_shopping">Congratulations!. Your account is created. Please login to continue shopping</string>
    <string name="go_to_homepage">Go to Homepage</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend_code">Resend code</string>
    <string name="login_account">Login Account</string>
    <string name="please_login_with_your_registered_account">Please login with your registered account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_code">Send code</string>
    <string name="create_new_password">Create new password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="favorites">Favorites</string>
    <string name="my_profile">My Profile</string>
    <string name="search_product_name">Search product name</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="featured_products">Featured Products</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="top_rated_products">Top Rated Products</string>
    <string name="special_offers">Special Offers</string>
    <string name="shop_now">Shop Now</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_phone">Enter valid phone</string>
    <string name="enter_your_mobile">Enter your mobile</string>
</resources>