<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/safeTopGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/safeBottomGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/safeTopGuideline"
        app:layout_constraintBottom_toBottomOf="@id/safeBottomGuideline"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        android:text="@string/create_account"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/safeTopGuideline"
        />


    <LinearLayout
        android:id="@+id/llUsernameSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreateAccount"
        >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="12sp"

        />

    <LinearLayout
        android:id="@+id/llUsernameEdittext"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        android:background="@drawable/edittext_layout_bg"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:tint="@color/gray"
            app:srcCompat="@drawable/ic_username"
            android:layout_gravity="center_vertical"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:background="@drawable/edittext_layout_bg"
            android:hint="@string/create_your_username"
            android:fontFamily="@font/rubik_medium"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black45"
            android:textSize="12sp"
            />
    </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llEmailSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llUsernameSection"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textSize="12sp"

            />

        <LinearLayout
            android:id="@+id/llEmailEdittext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edittext_layout_bg"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:tint="@color/gray"
                app:srcCompat="@drawable/ic_email"
                android:layout_gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_layout_bg"
                android:hint="@string/enter_your_email"
                android:fontFamily="@font/rubik_medium"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black45"
                android:textSize="12sp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhoneSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llEmailSection"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textSize="12sp"

            />

        <LinearLayout
            android:id="@+id/llPhoneEdittext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edittext_layout_bg"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:tint="@color/gray"
                app:srcCompat="@drawable/ic_phone"
                android:layout_gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="number|phone"
                android:background="@drawable/edittext_layout_bg"
                android:hint="@string/enter_your_phone"
                android:fontFamily="@font/rubik_medium"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black45"
                android:textSize="12sp"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPasswordSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPhoneSection"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textSize="12sp"

            />

        <LinearLayout
            android:id="@+id/llPasswordEdittext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edittext_layout_bg"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:tint="@color/gray"
                app:srcCompat="@drawable/ic_password"
                android:layout_gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edittext_layout_bg"
                android:hint="@string/create_your_password"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:fontFamily="@font/rubik_medium"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black45"
                android:textSize="12sp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPasswordVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/gray"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/ic_password_visibility"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfirmPasswordSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPasswordSection"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textSize="12sp"

            />

        <LinearLayout
            android:id="@+id/llConfirmPasswordEdittext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edittext_layout_bg"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:tint="@color/gray"
                app:srcCompat="@drawable/ic_password"
                android:layout_gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edittext_layout_bg"
                android:hint="@string/confirm_your_password"
                android:fontFamily="@font/rubik_medium"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black45"
                android:textSize="12sp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivConfirmPasswordVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/gray"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/ic_password_visibility"
                />

        </LinearLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_medium"
        android:textSize="16sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@color/primary_violet"
        />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOrSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_in_with"
                android:textColor="@color/gray"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_medium"
                />

            <LinearLayout
                android:id="@+id/llGoogleSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_marginHorizontal="60dp"
                android:background="@color/search_bar_bg"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivGoogle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_google"
                    android:layout_marginVertical="16dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_with_google"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black45"
                    android:layout_marginStart="12dp"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llFacebookSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:layout_marginHorizontal="60dp"
                android:background="@color/search_bar_bg"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivFb"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_facebook"
                    android:layout_marginVertical="16dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_with_facebook"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black45"
                    android:layout_marginStart="12dp"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/modalProgressContainer"
        android:name="com.example.shoppie.utils.common.ModalProgressLoadingFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_modal_progress_loading"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>