<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_bg"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/safeBottomGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="48dp" />

    <View
        android:id="@+id/handleView"
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:layout_marginTop="25dp"
        android:background="@color/grey_button_25_alpha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_medium"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/handleView"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSuccessSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email"
        android:textColor="@color/black45"
        android:fontFamily="@font/rubik_medium"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/tvForgotPassword"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        />


    <LinearLayout
        android:id="@+id/llEmailSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSuccessSubtitle"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textSize="12sp"

            />

        <LinearLayout
            android:id="@+id/llEmailEdittext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edittext_layout_bg"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:tint="@color/gray"
                app:srcCompat="@drawable/ic_email"
                android:layout_gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edittext_layout_bg"
                android:hint="@string/enter_your_email"
                android:fontFamily="@font/rubik_medium"
                android:paddingHorizontal="12dp"
                android:textColor="@color/black45"
                android:textSize="12sp"
                />
        </LinearLayout>

    </LinearLayout>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:paddingVertical="16dp"
        android:background="@color/primary_violet"
        android:text="@string/send_code"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/llEmailSection"
        app:layout_constraintBottom_toBottomOf="@id/safeBottomGuideline"
        />

</androidx.constraintlayout.widget.ConstraintLayout>